adicionado modulo generated form adicionado componentes form, shorttext e long-text

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -7,6 +7,7 @@
 </ion-header>
 
 <ion-content padding>
+  <app-form></app-form>
   <form>
     <div>
       <h2>Texto curto</h2>
@@ -15,6 +16,7 @@
         <ion-input id="item1"></ion-input>
       </ion-item>
     </div>
+    <app-short-text></app-short-text>
     <div>
       <h2>Texto longo</h2>
       <ion-item>
