--- a/src/app/generated-form/long-text/long-text.component.html
+++ b/src/app/generated-form/long-text/long-text.component.html
@@ -1,3 +1,7 @@
-<p>
-  long-text works!
-</p>
+<div>
+  <h2>{{title}}</h2>
+  <ion-item>
+    <ion-label position="floating">{{label}}</ion-label>
+    <ion-textarea (ionInput)="onChange($event)"></ion-textarea>
+  </ion-item>
+</div>
