service worker background sync, correções

--- a/src/app/generated-form/form/form.component.html
+++ b/src/app/generated-form/form/form.component.html
@@ -5,6 +5,6 @@
     <app-multiple-choice [title]="'Escolha Múltipla'" [label]="'Resposta'" [options]="['Opção 1', 'Opção 2', 'Opção 3']" formControlName="input3"></app-multiple-choice>
     <app-checkbox [title]="'Checkbox'" [options]="checkbox_options" formControlName="input4"></app-checkbox>
     <app-select [title]="'Select'" [label]="'Resposta'" [placeholder]="'Opções'" [okText]="'Ok'" [cancelText]="'Cancelar'" [options]="['Opção 1', 'Opção 2', 'Opção 3']" formControlName="input5"></app-select>
-    <ion-button color="primary" (click)="printForm()">Print form on console</ion-button>
+    <ion-button color="primary" (click)="submitForm()">Submit Form</ion-button>
   </form>
 </div>
