--- a/src/app/generated-form/slider/slider.component.html
+++ b/src/app/generated-form/slider/slider.component.html
@@ -1,3 +1,6 @@
-<p>
-  slider works!
-</p>
+<div>
+  <h2>{{title}}</h2>
+  <ion-item>
+    <ion-range min="{{min}}}" max="{{max}}" step="{{step}}" snaps="true" ticks="true" (ionChange)="onChange($event.target.value)"></ion-range>
+  </ion-item>
+</div>
