--- a/src/app/generated-form/form/form.component.html
+++ b/src/app/generated-form/form/form.component.html
@@ -1,12 +1,21 @@
-<div>
-  <form [formGroup]="generatedForm">
-    <app-short-text [title]="'Texto curto'" [label]="'Resposta'" formControlName="input1"></app-short-text>
-    <app-long-text [title]="'Texto longo'" [label]="'Resposta'" formControlName="input2"></app-long-text>
-    <app-multiple-choice [title]="'Escolha Múltipla'" [label]="'Resposta'" [options]="['Opção 1', 'Opção 2', 'Opção 3']" formControlName="input3"></app-multiple-choice>
-    <app-checkbox [title]="'Checkbox'" [options]="checkbox_options" formControlName="input4"></app-checkbox>
-    <app-select [title]="'Select'" [label]="'Resposta'" [placeholder]="'Opções'" [okText]="'Ok'" [cancelText]="'Cancelar'" [options]="['Opção 1', 'Opção 2', 'Opção 3']" formControlName="input5"></app-select>
-    <app-slider [title]="'Slider'" [min]="1" [max]="5" [step]="1" formControlName="input6"></app-slider>
-    <app-date [title]="'Data'" [label]="'Data'" [display]="'DD/MM/YYYY'" [picker]="'DD MM YYYY'" formControlName="input7"></app-date>
-    <ion-button color="primary" (click)="submitForm()">Submit Form</ion-button>
-  </form>
-</div>
+<form [formGroup]="generatedForm">
+    <app-short-text [title]="'Texto Curto'" [label]="'Resposta'"
+    formControlName="q1"></app-short-text>
+    <app-long-text [title]="'Texto Longo'" [label]="'Resposta'"
+    formControlName="q2"></app-long-text>
+    <app-multiple-choice [title]="'Escolha Múltipla'" [label]="'Resposta'"
+    [options]="q3_options" formControlName="q3"></app-multiple-choice>
+    <app-checkbox [title]="'Checkbox'" [options]="q4_options"
+    formControlName="q4"></app-checkbox>
+    <app-select [title]="'Select'" [label]="'select'"
+    [placeholder]="'resposta'" [okText]="'Ok'"
+    [cancelText]="'Cancel'" [options]="q5_options"
+    formControlName="q5"></app-select>
+    <app-slider [title]="'Slider'" [min]="1" [max]="5"
+    [step]="1" formControlName="q6"></app-slider>
+    <app-date [title]="'Data'" [label]="'Data'" [display]="'DD/MM/YYYY'"
+    [picker]="'DD MMM YYYY'" formControlName="q7"></app-date>
+    <div text-center>
+      <ion-button color="primary" (click)="submitForm()">Enviar respostas</ion-button>
+  </div>
+</form>
