Incluido tabs na pagina inicial do aplicativo

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,11 +1,11 @@
 <ion-header>
   <ion-toolbar color="primary">
     <ion-title>
-      Formulário
+      Formulários
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
-  <app-form></app-form>
+<ion-content>
+    <app-form></app-form>
 </ion-content>
