--- a/src/app/app-routing.ejs
+++ b/src/app/app-routing.ejs
@@ -3,9 +3,9 @@ import { PreloadAllModules, RouterModule, Routes } from '@angular/router';
 
 const routes: Routes = [
   { path: '', loadChildren: './tabs/tabs.module#TabsPageModule' },
-
-    {path: 'form-n1', loadChildren: './generated-forms/generated-forms.module#FormN1Component'},
-
+  <%_ forms.forEach(form => {%>
+    {path: 'form-n<%=form.formNumber %>', loadChildren: './generated-forms/generated-forms.module#FormN<%=form.formNumber%>Component'},
+  <%_ });%>
 ];
 
 @NgModule({
