--- a/src/app/form-manager/form-list/form-list.component.html
+++ b/src/app/form-manager/form-list/form-list.component.html
@@ -1,6 +1,6 @@
 <ion-list>
 
-    <ion-item href="/form-n1" routerDirection="forward">
+    <ion-item href="/#/form-list/forms/form-n1" routerDirection="forward">
       <ion-label>Form Um</ion-label>
     </ion-item>
 
