--- a/src/app/form-components/short-text/short-text.component.html
+++ b/src/app/form-components/short-text/short-text.component.html
@@ -2,6 +2,6 @@
   <h2>{{title}}</h2>
   <ion-item>
     <ion-label position="floating">{{label}}</ion-label>
-    <ion-input (ionInput)="onChange($event)"></ion-input>
+    <ion-input (ionInput)="onChange($event.target.value)"></ion-input>
   </ion-item>
 </div>
