--- a/src/app/generated-forms/form-n1/form-n1.component.html
+++ b/src/app/generated-forms/form-n1/form-n1.component.html
@@ -1,5 +1,8 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color='primary'>
+    <ion-buttons slot="start">
+      <ion-back-button defaultHref="tabs/tab1"></ion-back-button>
+    </ion-buttons>
     <ion-title>Form Um</ion-title>
   </ion-toolbar>
 </ion-header>
