--- a/src/app/form-manager/response-list/response-list.component.html
+++ b/src/app/form-manager/response-list/response-list.component.html
@@ -1,3 +1,10 @@
-<p>
-  response-list works!
-</p>
+<ion-list>
+
+  <ion-item *ngFor="let response of responseList" [routerLink]="['/response/response/', response.date]" routerDirection="forward">
+    <ion-label>
+      <h2>{{forms[response.formId].title}}</h2>
+      <h3>{{dateToString(response.date)}}</h3>
+    </ion-label>
+  </ion-item>
+
+</ion-list>
