--- a/src/form-sw.ejs
+++ b/src/form-sw.ejs
@@ -21,7 +21,7 @@ function submitForms(){
                 if(cursor){
                     let value = cursor.value;
                     if(value.status == 0){
-                        postGoogleForms(value.id, value.form);
+                        postGoogleForms(value.formId, value.form);
                         value.status = 1;
                         cursor.update(value);
                     }
@@ -38,9 +38,10 @@ function submitForms(){
 }
 
 
-function postGoogleForms(id, form){
+function postGoogleForms(formId, form){
     const formUrl = '<%=url%>';
     let formBody = new URLSearchParams();
+    formBody.append('sheetName', formId);
     for(let k in form){
         formBody.append(k, form[k]);
     }
