update src e docs

--- a/src/app/form-manager/form-list/form-list-html.ejs
+++ b/src/app/form-manager/form-list/form-list-html.ejs
@@ -1,6 +1,6 @@
 <ion-list>
     <%_ forms.forEach(form => {%>
-    <ion-item href="/#/form-list/forms/form-n<%= form.formNumber %>" routerDirection="forward">
+    <ion-item href="/#/form-list/form-n<%= form.formNumber %>" routerDirection="forward">
       <ion-label><%=form.title %></ion-label>
     </ion-item>
     <%_ }); %>
