--- a/src/app/form-manager/form-list/form-list.component.html
+++ b/src/app/form-manager/form-list/form-list.component.html
@@ -1,7 +1,7 @@
 <ion-list>
 
-    <ion-item href="/#/form-list/forms/form-n1" routerDirection="forward">
-      <ion-label>Form Um</ion-label>
+    <ion-item href="/#/form-list/form-n1" routerDirection="forward">
+      <ion-label>Formulário</ion-label>
     </ion-item>
 
 </ion-list>
